Fixed break-all to texts styles for too small media.

--- a/src/components/Text/styles.module.css
+++ b/src/components/Text/styles.module.css
@@ -23,7 +23,7 @@
 }
 
 @media screen and (min-width: 300px) {
-  .heading {
+  .text {
     word-break: initial;
   }
 }
